Fix home section alignment

--- a/website/static/scss/_base.scss
+++ b/website/static/scss/_base.scss
@@ -18,11 +18,12 @@ body {
     color: $accent-colour;
     border: 2px solid $accent-colour;
     border-radius: 999px;
-    padding: 0.5rem 0.5rem;
+    padding: 0.75rem 1.5rem 0.75rem 1.5rem;
     cursor: pointer;
     transition: background-color 0.2s;
     text-decoration: none;
     font-family: $font-family;
+    align-self: flex-start;
 
     &:hover {
         background-color: $accent-colour;
